objects/Proof_of_Value__c.object
<CustomObject>
    <fields>
        <fullName>POV_Solution_Advanced_Threat__c</fullName>
        <description>Select the Security / Advanced Threat product that will be provided for this POV.</description>
        <inlineHelpText>Select the Security / Advanced Threat product that will be provided for this POV.</inlineHelpText>
        <label>POV Solution -  Advanced Threat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMP for CES (Cloud Email Security)</fullName>
                </value>
                <value>
                    <fullName>AMP for CWS (Cloud Web Security)</fullName>
                </value>
                <value>
                    <fullName>AMP for Endpoint</fullName>
                </value>
                <value>
                    <fullName>AMP for ESA (Email Security Appliance)</fullName>
                </value>
                <value>
                    <fullName>AMP for Network-FP and ASA Sub/Appliance</fullName>
                </value>
                <value>
                    <fullName>AMP for WSA (Web Security Appliance)</fullName>
                </value>
                <value>
                    <fullName>AMP Private Cloud</fullName>
                </value>
                <value>
                    <fullName>Cognitive (CTA)</fullName>
                </value>
                <value>
                    <fullName>Other Advanced Threat-Acquisition</fullName>
                </value>
                <value>
                    <fullName>Other Advanced Threat Solution</fullName>
                </value>
                <value>
                    <fullName>Stealthwatch Appliances and Licenses</fullName>
                </value>
                <value>
                    <fullName>Stealthwatch Cloud Edition</fullName>
                </value>
                <value>
                    <fullName>Stealthwatch Learning Network</fullName>
                </value>
                <value>
                    <fullName>Stealthwatch Services</fullName>
                </value>
                <value>
                    <fullName>Threat Grid Appliance</fullName>
                </value>
                <value>
                    <fullName>Threat Grid SaaS</fullName>
                </value>
                <value>
                    <fullName>AMP on Endpoint/ThreatGrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POV_Solution_Email_Security__c</fullName>
        <description>Select the Security / Email Security product that will be provided for this POV.</description>
        <inlineHelpText>Select the Security / Email Security product that will be provided for this POV.</inlineHelpText>
        <label>POV Solution -  Email Security</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CES-Cloud Email Security</fullName>
                </value>
                <value>
                    <fullName>ELA-Enterprise License Agreement</fullName>
                </value>
                <value>
                    <fullName>ESA-Email Security Appliance</fullName>
                </value>
                <value>
                    <fullName>Hybrid CES/ESA-Email Appliance and Cloud</fullName>
                </value>
                <value>
                    <fullName>Other Email Security</fullName>
                </value>
                <value>
                    <fullName>Other Email Security-Acquisition</fullName>
                </value>
                <value>
                    <fullName>ZIX OEM Encryption</fullName>
                </value>
                <value>
                    <fullName>CES-Cloud Email Security with O365</fullName>
                </value>
                <value>
                    <fullName>Advanced Phishing - On prem sensor</fullName>
                </value>
                <value>
                    <fullName>Advanced Phishing - Cloud sensor</fullName>
                </value>
                <value>
                    <fullName>Domain Protection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POV_Solution_NGFW_IPS__c</fullName>
        <description>Select the Security / NGFW/IPS product that will be provided for this POV.</description>
        <inlineHelpText>Select the Security / NGFW/IPS product that will be provided for this POV.</inlineHelpText>
        <label>POV Solution - NGFW/IPS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ASA High 5585</fullName>
                </value>
                <value>
                    <fullName>ASA Low 5505/5506</fullName>
                </value>
                <value>
                    <fullName>ASA Mid 5508/16/12/15/45/55</fullName>
                </value>
                <value>
                    <fullName>ASA Service Module</fullName>
                </value>
                <value>
                    <fullName>ASA Virtual Appliance</fullName>
                </value>
                <value>
                    <fullName>Cisco Defense Orchestrator-CDO</fullName>
                </value>
                <value>
                    <fullName>Cisco Security Manager</fullName>
                </value>
                <value>
                    <fullName>Firepower / Firesight Manager / FMC</fullName>
                </value>
                <value>
                    <fullName>Firepower / NGIPS Virtual Appliance</fullName>
                </value>
                <value>
                    <fullName>Firepower 2100 NGFW</fullName>
                </value>
                <value>
                    <fullName>Firepower 2100-NGIPS</fullName>
                </value>
                <value>
                    <fullName>Firepower 4100 NGFW</fullName>
                </value>
                <value>
                    <fullName>Firepower 4100-NGIPS</fullName>
                </value>
                <value>
                    <fullName>Firepower 7000 Series</fullName>
                </value>
                <value>
                    <fullName>Firepower 8000 Series</fullName>
                </value>
                <value>
                    <fullName>Firepower 9300-NGFW</fullName>
                </value>
                <value>
                    <fullName>Firepower 9300-NGIPS</fullName>
                </value>
                <value>
                    <fullName>Firepower on ISR</fullName>
                </value>
                <value>
                    <fullName>Firepower Services Subscriptions</fullName>
                </value>
                <value>
                    <fullName>FMC2500</fullName>
                </value>
                <value>
                    <fullName>FMC4500</fullName>
                </value>
                <value>
                    <fullName>Other Network Security-Acquisition</fullName>
                </value>
                <value>
                    <fullName>Radware / DDoS</fullName>
                </value>
                <value>
                    <fullName>SSL Appliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POV_Solution_Policy_Access__c</fullName>
        <description>Select the Security / Policy &amp; Access product that will be provided for this POV.</description>
        <inlineHelpText>Select the Security / Policy &amp; Access product that will be provided for this POV.</inlineHelpText>
        <label>POV Solution - Policy &amp; Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACS-Access Control Server</fullName>
                </value>
                <value>
                    <fullName>AnyConnect</fullName>
                </value>
                <value>
                    <fullName>ISE-Cisco Identity Services Engine</fullName>
                </value>
                <value>
                    <fullName>Other Policy &amp; Access</fullName>
                </value>
                <value>
                    <fullName>Other Policy &amp; Access-Acquisition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POV_Solution_Web_Security__c</fullName>
        <description>Select the Security / Web Security product that will be provided for this POV.</description>
        <inlineHelpText>Select the Security / Web Security product that will be provided for this POV.</inlineHelpText>
        <label>POV Solution -  Web Security</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CloudLock</fullName>
                </value>
                <value>
                    <fullName>CWS-Cloud Web Security</fullName>
                </value>
                <value>
                    <fullName>Hybrid CWS/WSA-Web Appliance and Cloud</fullName>
                </value>
                <value>
                    <fullName>OpenDNS / Umbrella Branch</fullName>
                </value>
                <value>
                    <fullName>OpenDNS / Umbrella Investigate</fullName>
                </value>
                <value>
                    <fullName>OpenDNS / Umbrella-Prof, Platform, Insight</fullName>
                </value>
                <value>
                    <fullName>OpenDNS / Umbrella Roaming</fullName>
                </value>
                <value>
                    <fullName>Other Web Security</fullName>
                </value>
                <value>
                    <fullName>Other Web Security-Acquisition</fullName>
                </value>
                <value>
                    <fullName>SMA-Security Management Appliance</fullName>
                </value>
                <value>
                    <fullName>WSA-Web Security Appliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POV_Start_Date__c</fullName>
        <description>Proof of value Start Date</description>
        <inlineHelpText>Estimated POV start date. NOTE: Once POV has initiated set this date to the day of the POV kick-off or the first day of license enablement.</inlineHelpText>
        <label>POV Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POV_Status_Comments__c</fullName>
        <description>POV Status Comments</description>
        <inlineHelpText>Please share details relevant to the status of your POV, such as:  Status of implementation, Next Steps, Items Preventing Adoption, Risks, etc. Include date and initials.</inlineHelpText>
        <label>POV Status Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POV_Status__c</fullName>
        <description>Once a POV has been approved, edit this field to show the current state of the POV. Keep this field current through the life of the POV</description>
        <inlineHelpText>Once a POV has been approved, edit this field to show the current state of the POV. Keep this field current through the life of the POV</inlineHelpText>
        <label>POV Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POV Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approval In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POV_Type__c</fullName>
        <description>Proof of value Type</description>
        <inlineHelpText>TACTICAL: Lower value opp., lacks biz drivers, used for discovery. STRATEGIC: High value opp., clear biz drivers. C-POC: High value opp., perform in Cisco lab. SOFTWARE ONLY: No HW reqs. VM solution, license for current equipment, or SW only POV.</inlineHelpText>
        <label>POV Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tactical</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Partner Executed</fullName>
                </value>
                <value>
                    <fullName>C-POC</fullName>
                </value>
                <value>
                    <fullName>Software Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Firejumper_Contact__c</fullName>
        <description>Partner Firejumper Contact</description>
        <label>Partner Firejumper Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Position__c</fullName>
        <description>Proof of value type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Channel In</fullName>
                </value>
                <value>
                    <fullName>Channel Out</fullName>
                </value>
                <value>
                    <fullName>Unregistered</fullName>
                </value>
                <value>
                    <fullName>BD In</fullName>
                </value>
                <value>
                    <fullName>BD Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <description>TRUSTED ADVRISOR: Partner has strong relationship, is able to influence purchase. EXISTING RESELLER: partner has sold into the account before, is able to ease purchase. FULFILLMENT: Partner is a purchase vehicle only. NEW: New acct for partner.</description>
        <inlineHelpText>TRUSTED ADVRISOR: Partner has strong relationship, is able to influence purchase. EXISTING RESELLER: partner has sold into the account before, is able to ease purchase. FULFILLMENT: Partner is a purchase vehicle only. NEW: New acct for partner.</inlineHelpText>
        <label>Partner Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trusted Adviser</fullName>
                </value>
                <value>
                    <fullName>Existing Reseller</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>New to the Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_SE_Contact__c</fullName>
        <description>Note the Partner company’s Systems Engineer working this POV and sales opportunity.</description>
        <inlineHelpText>Note the Partner company’s Systems Engineer working this POV and sales opportunity.</inlineHelpText>
        <label>Partner SE Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Contact__c</fullName>
        <description>Note the Partner company’s Sales Representative working this POV and sales opportunity</description>
        <inlineHelpText>Note the Partner company’s Sales Representative working this POV and sales opportunity</inlineHelpText>
        <label>Partner Sales Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_of_POV_Advanced_Threat__c</fullName>
        <description>Percent of POV -  Advanced Threat</description>
        <inlineHelpText>What % of the value of this POV does Advanced Threat represent?</inlineHelpText>
        <label>Percent of POV -  Advanced Threat</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_POV_Email_Security__c</fullName>
        <description>What % of the value of this POV does Email Security represent?</description>
        <inlineHelpText>What % of the value of this POV does Email Security represent?</inlineHelpText>
        <label>Percent of POV -  Email Security</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_POV_NGFW_IPS__c</fullName>
        <description>What % of the value of this POV does NGFW/IPS represent?</description>
        <inlineHelpText>What % of the value of this POV does NGFW/IPS represent?</inlineHelpText>
        <label>Percent of POV - NGFW/IPS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_POV_Policy_Access__c</fullName>
        <description>What % of the value of this POV does Policy &amp; Access represent?</description>
        <inlineHelpText>What % of the value of this POV does Policy &amp; Access represent?</inlineHelpText>
        <label>Percent of POV - Policy &amp; Access</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_POV_Web_Security__c</fullName>
        <description>What % of the value of this POV does Web Security represent?</description>
        <inlineHelpText>What % of the value of this POV does Web Security represent?</inlineHelpText>
        <label>Percent of POV -  Web Security</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_to_Win__c</fullName>
        <description>Describe the sales team’s plan to both successfully execute the POV and achieve both a technical win and a closed deal</description>
        <inlineHelpText>Describe the sales team’s plan to both successfully execute the POV and achieve both a technical win and a closed deal</inlineHelpText>
        <label>Plan to Win</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_Environmental_Requirements__c</fullName>
        <description>Document any specific configuration, performance, or integration requirements in order to deploy the POV equipment</description>
        <inlineHelpText>Document any specific configuration, performance, or integration requirements in order to deploy the POV equipment</inlineHelpText>
        <label>Platform/Environmental Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PoV_Contact_First_Name__c</fullName>
        <formula>POV_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PoV Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoV_Contact_Last_Name__c</fullName>
        <formula>POV_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PoV Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoV_Order_Category__c</fullName>
        <label>PoV Order Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POV Security</fullName>
                    <default>true</default>
                    <label>POV Security</label>
                </value>
                <value>
                    <fullName>POV Security Partner-Led</fullName>
                </value>
                <value>
                    <fullName>POV Collaboration</fullName>
                </value>
                <value>
                    <fullName>POV Assurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <description>Product</description>
        <inlineHelpText>Select the product types / capabilities that will be used for the POV</inlineHelpText>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>AMP for Endpoints</fullName>
                </value>
                <value>
                    <fullName>AMP for ESA/WSA/CWS</fullName>
                </value>
                <value>
                    <fullName>AMP for FirePower/ASA</fullName>
                </value>
                <value>
                    <fullName>AMP Private Cloud</fullName>
                </value>
                <value>
                    <fullName>AMP Threat Grid</fullName>
                </value>
                <value>
                    <fullName>ASA</fullName>
                </value>
                <value>
                    <fullName>ASA-High</fullName>
                </value>
                <value>
                    <fullName>CDO-Cisco Defense Orchestrator</fullName>
                </value>
                <value>
                    <fullName>CWS</fullName>
                </value>
                <value>
                    <fullName>Cyber Threat Defence</fullName>
                </value>
                <value>
                    <fullName>ESA</fullName>
                </value>
                <value>
                    <fullName>FP Killbox</fullName>
                </value>
                <value>
                    <fullName>ISE</fullName>
                </value>
                <value>
                    <fullName>NGFW</fullName>
                </value>
                <value>
                    <fullName>NGIPS</fullName>
                </value>
                <value>
                    <fullName>Stealthwatch</fullName>
                </value>
                <value>
                    <fullName>TrustSec</fullName>
                </value>
                <value>
                    <fullName>WSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Criteria__c</fullName>
        <description>Describe what will drive the final purchase decision on the solution (price, capability, features, usability, etc.)</description>
        <inlineHelpText>Describe what will drive the final purchase decision on the solution (price, capability, features, usability, etc.)</inlineHelpText>
        <label>Purchase Criteria</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Exception__c</fullName>
        <description>Reason for Exception</description>
        <label>Reason for Exception</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>POV_Agreement_Exception__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Embedded Agreement</fullName>
                </value>
                <value>
                    <fullName>Master Agreement on File</fullName>
                </value>
                <value>
                    <fullName>Federal Government Customer</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reseller_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reseller Partner</description>
        <label>Reseller Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>0123000000004aV</value>
            </filterItems>
            <filterItems>
                <field>Account.Partner_Account_Status__c</field>
                <operation>equals</operation>
                <value>Active (Registered)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proof of Values</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restrictive_Architecture__c</fullName>
        <description>Any physical, virtual, or performance considerations that will limit the ability to have a successful POV or successful sales opportunity</description>
        <inlineHelpText>Any physical, virtual, or performance considerations that will limit the ability to have a successful POV or successful sales opportunity</inlineHelpText>
        <label>Restrictive Architecture</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SE_Comments__c</fullName>
        <description>Document any additional or support comments to support the technical deployment or technical understanding required for Cisco to success in the POV.</description>
        <inlineHelpText>Document any additional or support comments to support the technical deployment or technical understanding required for Cisco to success in the POV</inlineHelpText>
        <label>SE Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_POV_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC POV Opportunity</description>
        <label>SFDC POV Opportunity ($0)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proof of Values</relationshipLabel>
        <relationshipName>Proof_of_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Comments__c</fullName>
        <description>Sales Team Comments</description>
        <inlineHelpText>Provide any additional information about the account or organization units that may impact success/failure for the POV</inlineHelpText>
        <label>Sales Team Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_SE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A second SE to work on the POV document</description>
        <inlineHelpText>This is the CSE/SE that may be supporting the lead or the account SE.</inlineHelpText>
        <label>Secondary SE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>POV_Justification_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Security AM</description>
        <inlineHelpText>The Security Account Manager that is associated with this parent opportunity of the POV</inlineHelpText>
        <label>Security AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proof_of_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Lead_SE_Status__c</fullName>
        <description>Security Lead SE Status</description>
        <label>Security Lead SE Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_OD_Status__c</fullName>
        <label>Security OD Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_OD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Security OD</description>
        <inlineHelpText>The Operations Director for the Security Sales team that is working the POV and security opportunity</inlineHelpText>
        <label>Security OD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proof_of_Value2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_RM_Status__c</fullName>
        <label>Security RM Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Security Reginol Manager</description>
        <inlineHelpText>The Regional Manager of the Security Account Manager that is working the POV and security opportunity</inlineHelpText>
        <label>Security RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>POV_Justification_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_SE_MGR_Status__c</fullName>
        <label>Security SE MGR Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_SE_MGR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Security Engineer manager</description>
        <inlineHelpText>The SE Manager of the Security CSE that is working the POV and security opportunity</inlineHelpText>
        <label>Security SE MGR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proof_of_Value1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address__c</fullName>
        <label>Ship to Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_to_Contact_Email__c</fullName>
        <label>Ship to Contact Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_to_Contact_Name__c</fullName>
        <label>Ship to Contact Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Contact_Phone__c</fullName>
        <label>Ship to Contact Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Software_Version_Number__c</fullName>
        <description>Allows the SE or RSM to add the software version number to the POV</description>
        <inlineHelpText>Specify the specific version of software required on the hardware (especially if it is not the most current version shipping)</inlineHelpText>
        <label>Software Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Differentiator_1__c</fullName>
        <description>Describe the unique Cisco solution offering or capabilities that will be offered to meet the requirements of the business initiative and deliver on the customer’s business drivers</description>
        <inlineHelpText>Describe the unique Cisco solution offering or capabilities that will be offered to meet the requirements of the business initiative and deliver on the customer’s business drivers</inlineHelpText>
        <label>Solution Differentiator 1</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Differentiator_2__c</fullName>
        <description>Describe the unique Cisco solution offering or capabilities that will be offered to meet the requirements of the business initiative and deliver on the customer’s business drivers</description>
        <inlineHelpText>Describe the unique Cisco solution offering or capabilities that will be offered to meet the requirements of the business initiative and deliver on the customer’s business drivers</inlineHelpText>
        <label>Solution Differentiator 2</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Differentiator_3__c</fullName>
        <description>Describe the unique Cisco solution offering or capabilities that will be offered to meet the requirements of the business initiative and deliver on the customer’s business drivers</description>
        <inlineHelpText>Describe the unique Cisco solution offering or capabilities that will be offered to meet the requirements of the business initiative and deliver on the customer’s business drivers</inlineHelpText>
        <label>Solution Differentiator 3</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specific_Instructions_for_Manufacturing__c</fullName>
        <description>Note any specific information for manufacturing, such as special shipping notes, unusual configuration requirements, etc.</description>
        <inlineHelpText>Note any specific information for manufacturing, such as special shipping notes, unusual configuration requirements, etc.</inlineHelpText>
        <label>Specific Instructions for Manufacturing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stakeholders__c</fullName>
        <description>Stakeholders</description>
        <inlineHelpText>Purchase authorities for this POV</inlineHelpText>
        <label>Stakeholders</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_Imperative_1__c</fullName>
        <description>Describe a company business driver that this POV will help achieve or improve</description>
        <inlineHelpText>Describe a company business driver or guiding imperative that this POV will help achieve or improve.</inlineHelpText>
        <label>Strategic Imperative 1</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_Imperative_2__c</fullName>
        <description>Describe a company business driver that this POV will help achieve or improve</description>
        <inlineHelpText>Describe a company business driver that this POV will help achieve or improve</inlineHelpText>
        <label>Strategic Imperative 2</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>